feat: add varName for node